fixed hamburger nav bug | aligned hero text ipad

--- a/assets/css/home-page.css
+++ b/assets/css/home-page.css
@@ -135,7 +135,7 @@ body {
 }
 .main {
   margin-bottom: 20px;
-  font-family: 'Archivo', sans-serif;
+  font-family: 'Roboto', sans-serif;
   border-top: solid #32695c 4px;
   border-bottom: solid #32695c 4px;
   background-image: url('/assets/img/desktop-hero-texture.gif');
@@ -157,17 +157,19 @@ body {
   filter: drop-shadow(0 0.2rem 0.5rem rgba(0, 0, 0, 0.9));
 }
 .hero h1 {
-  font-size: 1.5em;
+  font-size: 1.1em;
+  font-family: 'Domine', serif;
   white-space: pre-line;
   text-align: center;
-  color: #000;
-  font-weight: 800;
+  color: rgb(50, 105, 92);
+  font-weight: 700;
+  -webkit-text-stroke: 1px rgb(0, 0, 0);
 }
 .hero p {
-  padding: 0 70px;
+  padding: 0 10px;
 }
 .welcome {
-  margin-top: 30px;
+  margin-top: 10px;
 }
 .hero-desk {
   display: none;
@@ -185,7 +187,7 @@ body {
     background-repeat: no-repeat;
     background-position: top -60px right;
     height: 350px;
-    opacity: 0.3;
+    opacity: 0.2;
     background-size: 400px;
   }
   .grid-container {
@@ -198,17 +200,19 @@ body {
     margin-top: -300px;
   }
   .welcome {
-    margin-top: 125px;
+    margin-top: 5px;
     max-width: 600px;
+    z-index: 999;
   }
   .hero h1 {
-    font-size: 2em;
+    font-size: 1.8em;
     text-align: left;
   }
   .hero p {
     font-size: 1em;
     font-weight: 400;
     line-height: 1.3em;
+    padding: 0;
   }
   .hero-mbl {
     display: none;
@@ -216,6 +220,10 @@ body {
   .hero-desk {
     display: block;
   }
+}
+@media (min-width: 1200px) {
+.welcome {
+    margin-top: 125px;
 }
 
 /* =====Product-Home CSS===== */
